// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Build content map for > autotitle chain (hashIncludes default, mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "a.md": {
      "hash": "sha256-e19f736a55cd6146672e49a01be69b10da12cfd916a2f4fe93080beee94dad88",
      "size": 292,
    },
    "b.md": {
      "hash": "sha256-5e4a83e7c57bde1a3ee7a53ba7a3e62619f10d65888b2fdd17aa1f39798c7776",
      "size": 296,
    },
    "c.md": {
      "hash": "sha256-cb035ccd75faf9c8acf378f519accf7c2081f724598ee4bb096b46e3a28d51c4",
      "size": 283,
    },
    "toc.yaml": {
      "hash": "sha256-8bf60b589e4bb972e7b9ca9d924f6f8911f9d41e268bf710f0d5197246b576fd",
      "size": 157,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > autotitle chain (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "a.md": {
      "hash": "sha256-e19f736a55cd6146672e49a01be69b10da12cfd916a2f4fe93080beee94dad88",
      "size": 292,
    },
    "b.md": {
      "hash": "sha256-5e4a83e7c57bde1a3ee7a53ba7a3e62619f10d65888b2fdd17aa1f39798c7776",
      "size": 296,
    },
    "c.md": {
      "hash": "sha256-cb035ccd75faf9c8acf378f519accf7c2081f724598ee4bb096b46e3a28d51c4",
      "size": 283,
    },
    "toc.yaml": {
      "hash": "sha256-8bf60b589e4bb972e7b9ca9d924f6f8911f9d41e268bf710f0d5197246b576fd",
      "size": 157,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > autotitle target with include (hashIncludes default, mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "_includes/snippet.md": {
      "hash": "sha256-15e5534f3fd87d3799fc5ba720332adc871dc63ac87c27ab1baf6b083d5b5812",
      "size": 57,
    },
    "a.md": {
      "hash": "sha256-89ed4a2b26c6fa56820490392d1924b9c5069f6d627ae1c95f914e7c72ca5101",
      "size": 298,
    },
    "b.md": {
      "hash": "sha256-144c9ff69ad219b5872df8715c8cef647ca7c3369da5d598fea86ff366555f3f",
      "size": 307,
    },
    "toc.yaml": {
      "hash": "sha256-f0e5f8342a96da110f1a0c3dc468ce8bf536d9971b7f6268b7afc6327ba2d163",
      "size": 144,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > autotitle target with include (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "a.md": {
      "hash": "sha256-89ed4a2b26c6fa56820490392d1924b9c5069f6d627ae1c95f914e7c72ca5101",
      "size": 298,
    },
    "b.md": {
      "hash": "sha256-469394046caa7710414631963797925c9ec1cc022656c5ed5eae0965c838dc74",
      "size": 384,
    },
    "toc.yaml": {
      "hash": "sha256-f0e5f8342a96da110f1a0c3dc468ce8bf536d9971b7f6268b7afc6327ba2d163",
      "size": 144,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > diamond includes (hashIncludes default, mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "_includes/branch-a.md": {
      "hash": "sha256-3314f60ae1fcaaccab27d5075d5a8ad01bb5d139cc37f4240304d83a9ce88ace",
      "size": 101,
    },
    "_includes/branch-b.md": {
      "hash": "sha256-0d5505b5775980c435e7cb35b0452089980640ff5bc0878a45db8b23901099dd",
      "size": 102,
    },
    "_includes/shared.md": {
      "hash": "sha256-42e099cba25de4c74b858b07c83d4feb6565738d4e21ad3e7208f6e35048931d",
      "size": 55,
    },
    "index.md": {
      "hash": "sha256-1030bd55f81cfc832151d034a6df2ba08dfb9b6fbc6ad42526f41098c340d318",
      "size": 421,
    },
    "toc.yaml": {
      "hash": "sha256-5309b6c21d914169deeb265ac1988546c6c0ab47d100b89c4083efb3f711f872",
      "size": 116,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > diamond includes (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-1b44f8840c74a08f69c42db29b25d211b1f56d6fe750b367a1511d40c594c7eb",
      "size": 834,
    },
    "toc.yaml": {
      "hash": "sha256-5309b6c21d914169deeb265ac1988546c6c0ab47d100b89c4083efb3f711f872",
      "size": 116,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > nested includes (hashIncludes default, mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "_includes/level1.md": {
      "hash": "sha256-8720c7deb66b06273ae8fb303accf2a399e622b647e222cbb0dc12c74cdb0df7",
      "size": 121,
    },
    "_includes/level2.md": {
      "hash": "sha256-2ce37af4320216777549f95a5e533efb4486802619b4916aae31764ba98f3339",
      "size": 62,
    },
    "index.md": {
      "hash": "sha256-1dc06e09c335884a734398db83044cc58c9c0fc28f17b1a4d372b9389e52c19d",
      "size": 376,
    },
    "toc.yaml": {
      "hash": "sha256-8044d42eecbbbfbf108ef785d04d322e72b2381cea30243cf3accc2ccf469f89",
      "size": 115,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > nested includes (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-1b39c884790b2020aaef42e70f1551994b552777f30f3fbd90f3c660a7d85cc3",
      "size": 609,
    },
    "toc.yaml": {
      "hash": "sha256-8044d42eecbbbfbf108ef785d04d322e72b2381cea30243cf3accc2ccf469f89",
      "size": 115,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > project with an include and a picture (mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "_includes/snippet.md": {
      "hash": "sha256-25c382135c889a69ff3a79390f978f030364fc2fcec5e7db6e6e441c57791a61",
      "size": 26,
    },
    "index.md": {
      "hash": "sha256-00c364f08e5e7f50f84e2f57de50c881fb8de2ff3be664ddf5d2baf71aa06d8c",
      "size": 355,
    },
    "logo.svg": {
      "hash": "sha256-d13530939abcb6584d6b07c97ded2d9fc6d5751ef4c0262afe36cee3fad0d51c",
      "size": 3402,
    },
    "toc.yaml": {
      "hash": "sha256-08e2907230e064c5ce52e5859d5a3780ed84c41756f921f896a88033a40e0ae9",
      "size": 108,
    },
  },
  "pageAssets": {
    "index.md": [
      "logo.svg",
    ],
  },
  "schemaVersion": 1,
}
`;

exports[`Build content map for > project with an include and a picture (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-bb5671107354ea98a5a4f00e1b9d3d309615a36e73a1adaf2fda0f75f19dca61",
      "size": 401,
    },
    "logo.svg": {
      "hash": "sha256-d13530939abcb6584d6b07c97ded2d9fc6d5751ef4c0262afe36cee3fad0d51c",
      "size": 3402,
    },
    "toc.yaml": {
      "hash": "sha256-08e2907230e064c5ce52e5859d5a3780ed84c41756f921f896a88033a40e0ae9",
      "size": 108,
    },
  },
  "pageAssets": {
    "index.md": [
      "logo.svg",
    ],
  },
  "schemaVersion": 1,
}
`;

exports[`Build content map for > project with autotitle links between pages (mergeIncludes off) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-2c58e18477e5ad4504f373f0058847bc87e7e873de0ddea5a3619853de3dc145",
      "size": 297,
    },
    "other.md": {
      "hash": "sha256-2d1ed9265bdf19be76daf50e3a9983e8ca9e2df9285c7e6347b38291909ea337",
      "size": 275,
    },
    "toc.yaml": {
      "hash": "sha256-1455d101a04ae60d37e5ace467d36e4c650e481d90f22ce46cd7b637c33cf541",
      "size": 145,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;

exports[`Build content map for > project with autotitle links between pages (mergeIncludes on) 1`] = `
{
  "contentHashes": {
    ".yfm": {
      "hash": "sha256-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "size": 0,
    },
    "index.md": {
      "hash": "sha256-2c58e18477e5ad4504f373f0058847bc87e7e873de0ddea5a3619853de3dc145",
      "size": 297,
    },
    "other.md": {
      "hash": "sha256-2d1ed9265bdf19be76daf50e3a9983e8ca9e2df9285c7e6347b38291909ea337",
      "size": 275,
    },
    "toc.yaml": {
      "hash": "sha256-1455d101a04ae60d37e5ace467d36e4c650e481d90f22ce46cd7b637c33cf541",
      "size": 145,
    },
  },
  "pageAssets": {},
  "schemaVersion": 1,
}
`;
